--- a/paper/paper.qmd
+++ b/paper/paper.qmd
@@ -269,12 +269,17 @@ Political science professor at the University of Michigan, Ronald F. Inglehart, 
 ## Implication: Fewer Citizens Identify as Christian
 Interestingly, the marriage ceremony data analysed and discussed in this paper also indicate that Christianity is becoming less popular or prominent in the lives of English and Welsh citizens. As seen in @fig-oppositereligioustypes, all sects of Christianity have experienced a decrease in the annual number of marriage ceremonies conducted. This implies that less couples are religiously involved in Christianity to the extent of including it in their marriage plans. 
 
-Looking to "Religion, England and Wales: Census 2021" from the *Office for National Statistics* provides further insight on whether or not religious identification and marriage ceremony type are congruent in their data. In the 2021 census, 46.2% (27.5 million) identified as Christian in comparison to 59.3% (33.3 million) in 2011 [@census2021]. Although Christianity still remains the most popular religion in England and Wales, the decrease over a decade is still somewhat significant as less than half the population now identifies as Christian. This reflected on a smaller level in the marriage ceremony data, as seen in @fig-oppositereligiousten, since all Christian sects experienced a decline in annual marriage ceremonies with the Church of England seeing a reduction of just under 40,000 ceremonies in 2020 compared to 2011. 
+Looking to "Religion, England and Wales: Census 2021" from the *Office for National Statistics* provides further insight on whether or not religious identification and marriage ceremony type are congruent in their data. In the 2021 census, 46.2% (27.5 million) identified as Christian in comparison to 59.3% (33.3 million) in 2011 [@census2021]. Although Christianity still remains the most popular religion in England and Wales, the decrease over a decade is still somewhat significant as less than half the population now identifies as Christian. This reflected on a smaller level in the opposite-sex marriage ceremony data, as seen in @fig-oppositereligiousten, since all Christian sects experienced a decline in annual marriage ceremonies with the Church of England seeing a reduction of just under 40,000 ceremonies in 2020 compared to 2011. 
 
-
+Another significant data point from the 2021 census is citizens identifying as having no religion being 37.2% (22.2 million) compared to 5.2% (14.1 million) in 2011 [@census2021]. The decline of religious marriage ceremonies could be attributed to more individuals not identifying with any religion. In the same vein of Inglehart's arguments, the normalization of cohabitation without marriage as a condition [@inglehart] could be a reason why religious marriage ceremonies have declined whilst civil marriages have maintained relative stability over the past five decades. It is possible that couples that would have been pressured to marry in order to continue their relationship due to religious reasons no longer feel that due to shifting social attitudes. Considering external research and the data examined in this paper, the decline in religious marriage ceremonies could be a reflection of Christianity's decline in England and Wales.
 
 ## Implication: Same-Sex Couples Overwhelmingly Prefer Civil Ceremonies
+As previously discussed, same-sex couples differ to opposite-sex couples in regards to their marriage ceremony decision-making behaviour. Based on the data examined in this paper, same-sex couples have consistently and overwhelmingly opted for civil ceremonies over religious ceremonies since the legalization of same-sex marriage in 2014. Comparing marriage ceremony type of same-sex couples in @fig-samecivilvsreligious and opposite-sex couples in @fig-oppositecivilvsreligious, the trend lines are vastly different. For same-sex couples, civil ceremonies make up over 99% of all annual marriages conducted whereas opposite-sex couples have experienced periods where religious ceremonies were the predominant type and still have a significant presence in accounting for marriage ceremony types. 
+
+Looking at the graphed data and summary statistics, there appears to be a clear decline in the number of opposite-sex couples opting for a religious ceremony across a fifty-year timeframe between 1970 and 2020. For same-sex couples, civil ceremonies have consistently and overwhelmingly been the most popular ceremony type since the legalization of same-sex marriage in 2014. The latter phenomenon is likely best explained by the relationship between religion and homophobia. Barbara Finlay and Carol S. Walter’s work in *Review of Religious Research* found that Protestants had the highest homophobia scores followed by Catholics, other Christian denominations, and other religions [@homophobiaresearch]. As same-sex religious ceremonies are conducted and approved by each religious authority [@statsguide], it could be possible that religious leaders do not approve of same-sex marriages. Another reason for the lack of same-sex religious ceremonies could also be non-heterosexual individuals moving away from religiosity due to conflicts between religious thought and their sexual identities. 
+
 ## Limitations
+
 ## Future Research {#sec-future}
 
 
