--- a/paper/references.bib
+++ b/paper/references.bib
@@ -14,7 +14,13 @@
     year = {2020},
     note = {Accessed March 11 2024},
   }
-
+  
+  @misc{churchcost,
+    title = {The cost of church weddings},
+    url = {https://www.churchofengland.org/life-events/your-church-wedding/just-engaged/cost-church-weddings},
+    note = {Accessed April 2 2024},
+  }
+  
   @book{ukreligion,
     title = "Lost faith? The UK{\textquoteright}s changing attitudes to religion",
     author = "Bobby Duffy and George May and David Voas and James Wright and Rozi Harsanyi and     Kirstie Hewlett and Paul Stoneman",
@@ -47,10 +53,24 @@
     title = {User guide to marriage statistics},
     author = {Paula Guy},
     url = {https://www.ons.gov.uk/peoplepopulationandcommunity/birthsdeathsandmarriages/marriagecohabitationandcivilpartnerships/methodologies/userguidetomarriagestatistics},
-    year = {2024},
+    year = {2023},
     note = {Accessed April 2 2024},
   }
-
+  
+  @Manual{tibble,
+    title = {tibble: Simple Data Frames},
+    author = {Kirill Müller and Hadley Wickham},
+    year = {2023},
+    note = {R package version 3.2.1},
+    url = {https://CRAN.R-project.org/package=tibble},
+  }
+  
+  @misc{registercost,
+    title = {Marriages and civil partnerships in England and Wales},
+    url = {https://www.gov.uk/marriages-civil-partnerships/plan-your-ceremony},
+    note = {Accessed April 2 2024},
+  }
+  
   @Manual{arrow,
     title = {arrow: Integration to 'Apache' 'Arrow'},
     author = {Neal Richardson and Ian Cook and Nic Crane and Dewey Dunnington and Romain François and Jonathan Keane and Dragoș Moldovan-Grünfeld and Jeroen Ooms and Jacob Wujciak-Jens and {Apache Arrow}},
@@ -58,13 +78,13 @@
     note = {R package version 15.0.1},
     url = {https://CRAN.R-project.org/package=arrow},
   }
-
-  @Manual{tibble,
-    title = {tibble: Simple Data Frames},
-    author = {Kirill Müller and Hadley Wickham},
+  
+  @misc{marriageqmi,
+    title = {User guide to marriage statistics},
+    author = {Amanda Sharfman and Pamela Cobb},
+    url = {https://www.ons.gov.uk/peoplepopulationandcommunity/birthsdeathsandmarriages/marriagecohabitationandcivilpartnerships/methodologies/marriagesinenglandandwalesqmi},
     year = {2023},
-    note = {R package version 3.2.1},
-    url = {https://CRAN.R-project.org/package=tibble},
+    note = {Accessed April 2 2024},
   }
 
   @Article{naniar,
