--- a/paper/references.bib
+++ b/paper/references.bib
@@ -57,18 +57,25 @@
     note = {Accessed April 2 2024},
   }
   
+  @Book{inglehart,
+    author = {Ronald F. Inglehart},
+    title = {Religion's Sudden Decline: What's Causing it, and What Comes Next?},
+    publisher = {Oxford University Press},
+    year = {2021},
+    doi = {https://doi.org/10.1093/oso/9780197547045.001.0001}
+  }
+  @misc{registercost,
+    title = {Marriages and civil partnerships in England and Wales},
+    url = {https://www.gov.uk/marriages-civil-partnerships/plan-your-ceremony},
+    note = {Accessed April 2 2024},
+  }
+  
   @Manual{tibble,
     title = {tibble: Simple Data Frames},
     author = {Kirill Müller and Hadley Wickham},
     year = {2023},
     note = {R package version 3.2.1},
     url = {https://CRAN.R-project.org/package=tibble},
-  }
-  
-  @misc{registercost,
-    title = {Marriages and civil partnerships in England and Wales},
-    url = {https://www.gov.uk/marriages-civil-partnerships/plan-your-ceremony},
-    note = {Accessed April 2 2024},
   }
   
   @Manual{arrow,
