final paper update?

--- a/paper/paper.qmd
+++ b/paper/paper.qmd
@@ -281,12 +281,19 @@ Looking at the graphed data and summary statistics, there appears to be a clear 
 ## Limitations
 Despite this paper's effort to highlight how marriage ceremony data can be a reflection of the religious attitudes in England and Wales, there are some limitations that must be addressed.
 
-While the marriage ceremony data does seem to corroborate the overall decline of citizens identifying as religious, the marriage data might be slightly skewed in the population demographics that it collects from. As stated in research from King's College London, 48% of Baby Boomers expressed a belief in God in comparison to Gen Z at 37% in the United Kingdom [@ukreligion]. It is evident that there are differences in religiosity between generations, therefore it is possible that the marriage data could be skewed towards a decline of religiosity since those of ages more likely to marry belong to younger age generations such as Millenials and Gen Z's. 
+While the marriage ceremony data does seem to corroborate the overall decline of citizens identifying as religious, the marriage data might be slightly skewed in the population demographics that it collects from. As stated in research from King's College London, 48% of Baby Boomers expressed a belief in God in comparison to Gen Z at 37% in the United Kingdom [@ukreligion]. It is evident that there are differences in religiosity between generations, therefore it is possible that the marriage data could be skewed towards a decline of religiosity since those of ages more likely to marry belong to younger age generations such as Millennials and Gen Z's. 
 
+There are also accuracy considerations when it comes to making conclusions based on this data. As noted by the *Office for National Statistics*, data is taken directly from marriage registries from across the two countries and the information is mainly supplied by the people getting married without any major statistical verification aside from edits for cleaning. Couples that get married abroad are also not recorded with the exceptions being consular and military marriages [@marriageqmi]. Marriage ceremony by type could also be inherently misleading as religious marriages, such as Muslim or Sikh, can take place at unregistered premises [@marriageqmi]. The legal formalization of these marriages often occur as civil ceremonies and are recorded as such without an ability to account for the religious aspect of their marriage plans. As a result, the annual number of civil marriages could possibly inflated with the inclusion of couples that have separate legal and religious marriage ceremonies. 
 
+There could also be ethical implications to using this data as a reflection of religiosity. Using the same-sex couple data as an example, due to the legalization of same-sex marriage only occurring in 2014 it can be argued that there is not enough data to make conclusions about ceremony preferences. As well, it could be problematic to assume same-sex couples opt for civil ceremonies due to homophobia in religion and therefore are not religious. It is possible that same-sex couples could be practicing religion outside of mainstream institutions and the preference for civil ceremonies is due to these institutions not approving ceremonies. 
+Another possible limitation is the financial costs associated with a religious versus civil ceremony. The average cost at minimum for a wedding in the Church of England is £539 [@churchcost] whilst the cheapest civil ceremony is £46 [@registercost]. Due to the price difference in religious ceremonies, couples might also opt for a civil ceremony to save on costs and therefore the motivation would not be an aversion to religion.
 
 ## Future Research {#sec-future}
+Beyond this paper, there is a lot of research that could be undertaken to further understand the presence of religion and how it influences different facets of life. Looking to marriage ceremonies specifically, more research could be done on the factors influencing why couples opt for a civil or religious ceremony. Better data collection methods could also be developed to better collect data on marriage solemnization outside of the legal form in order to gain insight on the prevalence of religious ceremonies that are conducted outside of legally approved premises. By collecting a greater depth of marriage ceremony data, future research will be able to better ascertain or disprove whether or not marriage ceremony data is a good reflection of religiosity in a country. 
 
+There are also other areas that could be examined as an indicator of a country or population's religiosity such as enrollment in religious versus secular schools, support or use of abortion services, distribution of charitable donations, and observance of religious holidays on mandated holidays for that purpose. Delving further into research on charitable donations, examining the annual charitable donations of a country and analysing the amounts that go to each type of charity would be a novel way to see how religiosity of lack thereof can impact donation decisions.
+
+Since tracking religion falls under demography, it could also be worth further researching whether there are gender differences in religiosity. Considering the argument put forth by Inglehart about religion historically encouraging women to reproduce, it would be interesting to see if there are differences in attitudes towards religion between men and women. 
 
 \newpage
 
