final paper and references upload

--- a/paper/paper.qmd
+++ b/paper/paper.qmd
@@ -168,6 +168,7 @@ It is also apparent that Christianity has decreased in popularity for marriage c
 #| fig-cap: Annual Amount of Church of England (Red), Roman Catholic (Yellow), Other Christian Denominations (Green), and Other Relgion Ceremonies (Purple) Conducted Between 2011 and 2020 in England and Wales for Opposite-Sex Couples
 
 ten_year <- subset(opposite_sex, year >= 2011 & year <= 2020)
+
 ggplot(ten_year, aes(x = year)) + 
   geom_line(aes(y = coe), color = "darkred") + 
   geom_line(aes(y = rc), color = "yellow")  +
@@ -221,6 +222,7 @@ head (opposite_decades) |>
 #| fig-pos: "H"
 #| fig-cap: Annual Amount of Marriage Ceremonies Conducted Between 2014 and 2020 in England and Wales for Opposite-Sex Couples by Sex
 
+# Code referenced from: https://tidyr.tidyverse.org/reference/pivot_longer.html
 same_sex_demographics <-
   pivot_longer(same_sex, cols = c(male, female), names_to = "Sex", values_to = "Count")
 
@@ -267,9 +269,9 @@ Based on the decline of religious ceremonies conducted in England and Wales, it 
 Political science professor at the University of Michigan, Ronald F. Inglehart, wrote in his book *Religion's Sudden Decline: What's Causing it, and What Comes Next?* on the decline of religiosity. Inglehart's main argument on the reason for the decline in religion across the world is due to the historical stance of most major religions advising women to have as many as children possible due to high infant mortality rates. He argues that the introduction of individual-choice norms such as the normalization of divorce, acceptance of abortion, gender equality, and acceptance of LGBTQIA+ identities has empowered individuals to make decisions outside of religious guidance [@inglehart]. Connecting this with the results gathered in this paper, it is apparent that the decline of religious marriages could be specifically due to changing social norms outside of religion. As the societal pressure to reproduce and have children solely after marriage decreases, it makes sense to assume religious marriage ceremonies would decrease. This follows Inglehart's argument that the change towards individual-choice norms has undermined specific directives and the overall power of religions against societies. Extrapolating further, the dilution of religion in individual life could also result in its removal from significant life events such as marriage which was seen in analysis of marriage ceremony data in England and Wales.
 
 ## Implication: Fewer Citizens Identify as Christian
-Interestingly, the marriage ceremony data analysed and discussed in this paper also indicate that Christianity is becoming less popular or prominent in the lives of English and Welsh citizens. As seen in @fig-oppositereligioustypes, all sects of Christianity have experienced a decrease in the annual number of marriage ceremonies conducted. This implies that fewer couples are religiously involved in Christianity to the extent of including it in their marriage plans. 
+Interestingly, the marriage ceremony data analysed and discussed in this paper also indicate that Christianity is becoming less popular or prominent in the lives of English and Welsh citizens. As seen in @fig-oppositereligioustype, all sects of Christianity have experienced a decrease in the annual number of marriage ceremonies conducted. This implies that fewer couples are religiously involved in Christianity to the extent of including it in their marriage plans. 
 
-Looking at "Religion, England and Wales: Census 2021" from the *Office for National Statistics* provides further insight into whether or not religious identification and marriage ceremony type are congruent in their data. In the 2021 census, 46.2% (27.5 million) identified as Christian in comparison to 59.3% (33.3 million) in 2011 [@census2021]. Although Christianity remains the most popular religion in England and Wales, the decrease over a decade is still somewhat significant as less than half the population now identifies as Christian. This is reflected on a smaller level in the opposite-sex marriage ceremony data, as seen in @fig-oppositereligiousten, since all Christian sects experienced a decline in annual marriage ceremonies with the Church of England seeing a reduction of just under 40,000 ceremonies in 2020 compared to 2011. 
+Looking at "Religion, England and Wales: Census 2021" from the *Office for National Statistics* provides further insight into whether or not religious identification and marriage ceremony type are congruent in their data. In the 2021 census, 46.2% (27.5 million) identified as Christian in comparison to 59.3% (33.3 million) in 2011 [@census2021]. Although Christianity remains the most popular religion in England and Wales, the decrease over a decade is still somewhat significant as less than half the population now identifies as Christian. This is reflected on a smaller level in the opposite-sex marriage ceremony data, as seen in @fig-oppositereligioustypeten, since all Christian sects experienced a decline in annual marriage ceremonies with the Church of England seeing a reduction of just under 40,000 ceremonies in 2020 compared to 2011. 
 
 Another significant data point from the 2021 census is citizens identifying as having no religion being 37.2% (22.2 million) compared to 5.2% (14.1 million) in 2011 [@census2021]. The decline of religious marriage ceremonies could be attributed to more individuals not identifying with any religion. In the same vein of Inglehart's arguments, the normalization of cohabitation without marriage as a condition [@inglehart] could be a reason why religious marriage ceremonies have declined whilst civil marriages have maintained relative stability over the past five decades. It is possible that couples that would have been pressured to marry in order to continue their relationship due to religious reasons no longer feel that due to shifting social attitudes. Considering external research and the data examined in this paper, the decline in religious marriage ceremonies could be a reflection of Christianity's decline in England and Wales.
 
