--- a/paper/references.bib
+++ b/paper/references.bib
@@ -86,6 +86,14 @@
     url = {https://CRAN.R-project.org/package=arrow},
   }
   
+  @misc{census2021,
+    title = {Religion, England and Wales: Census 2021},
+    author = {Michael Roskams},
+    url = {https://www.ons.gov.uk/peoplepopulationandcommunity/culturalidentity/religion/bulletins/religionenglandandwales/census2021},
+    year = {2022},
+    note = {Accessed April 22 2024},
+  }
+  
   @misc{marriageqmi,
     title = {User guide to marriage statistics},
     author = {Amanda Sharfman and Pamela Cobb},
